--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KRISH SHAH | Security Research Lab</title>
+    <title>KRISH SHAH | Live Security Research</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -11,9 +11,10 @@
         body { background: #020617; color: #94a3b8; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
         .mono { font-family: 'Space Mono', monospace; }
         .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); border: 1px solid rgba(56, 189, 248, 0.1); }
-        .project-card { border: 1px solid rgba(14, 165, 233, 0.1); transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        .project-card:hover { border-color: #0ea5e9; transform: scale(1.02); background: rgba(14, 165, 233, 0.03); }
-        .status-pulse { width: 8px; height: 8px; border-radius: 50%; display: inline-block; margin-right: 8px; }
+        .live-card { border-left: 3px solid #0ea5e9; transition: all 0.3s ease; }
+        .live-card:hover { border-color: #f59e0b; background: rgba(245, 158, 11, 0.03); }
+        @keyframes pulse-red { 0% { opacity: 1; } 50% { opacity: 0.3; } 100% { opacity: 1; } }
+        .pulse-live { animation: pulse-red 2s infinite; }
     </style>
 </head>
 <body class="selection:bg-sky-500 selection:text-white">
@@ -21,197 +22,100 @@
     <nav class="fixed top-0 w-full z-50 px-6 py-4 glass border-b border-sky-900/20">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-2">
-                <i data-lucide="shield" class="text-sky-500 w-5 h-5"></i>
-                <span class="mono text-white font-bold tracking-tighter uppercase text-sm">KRISH_LABS_v3.0</span>
+                <span class="pulse-live w-2 h-2 bg-red-500 rounded-full"></span>
+                <span class="mono text-white font-bold tracking-tighter uppercase text-sm">SEC_MONITOR // KRISH_SHAH</span>
             </div>
-            <div class="hidden md:flex gap-8 text-[10px] mono uppercase tracking-widest">
-                <a href="#about" class="hover:text-sky-400">Researcher</a>
-                <a href="#active-projects" class="hover:text-sky-400">Active_Labs</a>
-                <a href="#roadmap" class="hover:text-sky-400">Roadmap</a>
-            </div>
-            <a href="mailto:Krishshah13579@gmail.com" class="text-sky-400 border border-sky-400/30 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-sky-500 hover:text-white transition uppercase">
-                Establish_Connection
+            <a href="mailto:Krishshah13579@gmail.com" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition uppercase">
+                Secure_Contact
             </a>
         </div>
     </nav>
 
-    <section id="about" class="min-h-[70vh] flex flex-col justify-center px-6 pt-32 max-w-7xl mx-auto">
-        <div class="max-w-4xl">
-            <h1 class="text-6xl md:text-8xl font-black text-white mb-8 tracking-tighter">
-                RESEARCH <span class="text-sky-500">&</span> DEVELOPMENT<span class="text-sky-500">.</span>
-            </h1>
-            <p class="text-xl leading-relaxed text-slate-300 mb-10 border-l-4 border-sky-500 pl-8">
-                <strong class="text-white underline decoration-sky-500">Krish Sandip Shah</strong> is a Computer Engineer & Security Researcher. 
-                Focused on <span class="text-sky-400">Security Automation</span> and <span class="text-sky-400">Network Forensics</span>. 
-                Leveraging Python to build adversarial simulation and defense tools.
-            </p>
-            <div class="flex flex-wrap gap-6 text-xs mono uppercase tracking-widest text-slate-500">
-                <span class="flex items-center gap-2"><i data-lucide="check-circle" class="text-emerald-500 w-4 h-4"></i> Loyalist College (2024)</span>
-                <span class="flex items-center gap-2"><i data-lucide="circle" class="text-amber-500 w-4 h-4 animate-pulse"></i> CompTIA Security+ (In Progress)</span>
+    <section class="min-h-[60vh] flex flex-col justify-center px-6 pt-32 max-w-7xl mx-auto">
+        <h1 class="text-6xl md:text-8xl font-black text-white mb-6 tracking-tighter uppercase">
+            Security <span class="text-sky-500">Analytics.</span>
+        </h1>
+        <p class="text-lg text-slate-400 max-w-2xl border-l-2 border-sky-500 pl-6">
+            Automated Research Hub. Real-time synchronization with GitHub repositories for 
+            <span class="text-white">Network Forensics</span> and <span class="text-white">OSINT</span> tool development.
+        </p>
+    </section>
+
+    <section class="max-w-7xl mx-auto px-6 py-12">
+        <div class="flex items-center gap-4 mb-12">
+            <h2 class="mono text-sky-500 text-xs uppercase tracking-[0.5em]">Live_Repository_Sync</h2>
+            <div class="h-px flex-grow bg-slate-900"></div>
+        </div>
+
+        <div id="github-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="glass p-8 rounded-2xl animate-pulse text-center mono text-xs">
+                FETCHING_DATA_FROM_GITHUB...
             </div>
         </div>
     </section>
 
-    <section id="active-projects" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
-        <div class="flex justify-between items-end mb-16">
-            <div>
-                <h2 class="mono text-sky-500 text-xs mb-2 uppercase tracking-[0.4em]">Ongoing_Operations</h2>
-                <h3 class="text-4xl font-bold text-white tracking-tight">Active Research Modules</h3>
+    <section class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
+        <div class="grid lg:grid-cols-2 gap-12">
+            <div class="glass p-8 rounded-2xl border-l-4 border-emerald-500">
+                <h3 class="text-white font-bold mb-2 uppercase mono text-sm">Academic Status</h3>
+                <p class="text-slate-400 text-sm">Loyalist College: Cyber Security Graduate (2024)</p>
             </div>
-            <div class="hidden md:block text-right mono text-[10px] text-slate-600">
-                SCALING_PROJECT_FEED... OK<br>
-                ENCRYPTION_LAYER... ACTIVE
-            </div>
-        </div>
-
-        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <div class="glass p-8 rounded-3xl project-card flex flex-col">
-                <div class="flex justify-between items-start mb-6">
-                    <div class="flex items-center gap-2">
-                        <span class="status-pulse bg-emerald-500"></span>
-                        <span class="text-[10px] mono text-emerald-500 uppercase">Live_Tool</span>
-                    </div>
-                    <i data-lucide="binary" class="text-slate-700"></i>
-                </div>
-                <h4 class="text-xl font-bold text-white mb-4">Inspection Tool</h4>
-                <p class="text-sm text-slate-400 mb-8 flex-grow">
-                    Full-cycle reconnaissance tool performing automated port scanning, WHOIS lookup, and subdomain discovery to map attack surfaces.
-                </p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">OSINT</span>
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">PYTHON</span>
-                </div>
-            </div>
-
-            <div class="glass p-8 rounded-3xl project-card flex flex-col">
-                <div class="flex justify-between items-start mb-6">
-                    <div class="flex items-center gap-2">
-                        <span class="status-pulse bg-emerald-500"></span>
-                        <span class="text-[10px] mono text-emerald-500 uppercase">Live_Tool</span>
-                    </div>
-                    <i data-lucide="activity" class="text-slate-700"></i>
-                </div>
-                <h4 class="text-xl font-bold text-white mb-4">Packet Sniffing Engine</h4>
-                <p class="text-sm text-slate-400 mb-8 flex-grow">
-                    Multi-mode network analyzer providing Raw, Summary, Target, and Host-based traffic exploration for forensic analysis.
-                </p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">NET_SEC</span>
-                    <span class="px-2 py-1 bg-sky-500/10 text-sky-400 text-[10px] mono rounded">FORENSICS</span>
-                </div>
-            </div>
-
-            <div class="glass p-8 rounded-3xl project-card flex flex-col">
-                <div class="flex justify-between items-start mb-6">
-                    <div class="flex items-center gap-2">
-                        <span class="status-pulse bg-amber-500 animate-pulse"></span>
-                        <span class="text-[10px] mono text-amber-500 uppercase">In_Development</span>
-                    </div>
-                    <i data-lucide="lock" class="text-slate-700"></i>
-                </div>
-                <h4 class="text-xl font-bold text-white mb-4">Secure Keylogger</h4>
-                <p class="text-sm text-slate-400 mb-8 flex-grow">
-                    Researching data exfiltration techniques and keystroke logging mechanisms within secure Python environments.
-                </p>
-                <div class="flex gap-2">
-                    <span class="px-2 py-1 bg-amber-500/10 text-amber-500 text-[10px] mono rounded">MALWARE_RES</span>
-                    <span class="px-2 py-1 bg-amber-500/10 text-amber-500 text-[10px] mono rounded">PYTHON</span>
-                </div>
+            <div class="glass p-8 rounded-2xl border-l-4 border-amber-500">
+                <h3 class="text-white font-bold mb-2 uppercase mono text-sm">Current Objective</h3>
+                <p class="text-slate-400 text-sm">Certification: CompTIA Security+ (Examination Phase)</p>
             </div>
         </div>
     </section>
-
-    <section id="roadmap" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900 bg-slate-900/10">
-        <div class="grid lg:grid-cols-2 gap-20">
-            <div>
-                <h2 class="mono text-sky-500 text-xs mb-8 uppercase tracking-[0.4em]">Skill_Optimization</h2>
-                <div class="space-y-8">
-                    <div>
-                        <div class="flex justify-between mb-3 text-xs mono text-white">
-                            <span>Vulnerability Assessment</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="h-1 bg-slate-800 rounded-full"><div class="h-full bg-sky-500 rounded-full" style="width: 80%"></div></div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between mb-3 text-xs mono text-white">
-                            <span>Network Forensics</span>
-                            <span>75%</span>
-                        </div>
-                        <div class="h-1 bg-slate-800 rounded-full"><div class="h-full bg-sky-500 rounded-full" style="width: 75%"></div></div>
-                    </div>
-                    <div>
-                        <div class="flex justify-between mb-3 text-xs mono text-white">
-                            <span>Python Security Automation</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="h-1 bg-slate-800 rounded-full"><div class="h-full bg-sky-500 rounded-full" style="width: 90%"></div></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="glass p-10 rounded-3xl border-l-4 border-amber-500">
-                <h3 class="text-2xl font-bold text-white mb-6">Certification Roadmap</h3>
-                <div class="space-y-8">
-                    <div class="flex gap-6">
-                        <div class="flex flex-col items-center"><div class="w-2 h-2 bg-emerald-500 rounded-full"></div><div class="w-px h-10 bg-slate-800"></div></div>
-                        <div><p class="text-white font-bold">Loyalist College Certification</p><p class="text-[10px] mono text-emerald-500 uppercase">Graduated 2024</p></div>
-                    </div>
-                    <div class="flex gap-6">
-                        <div class="flex flex-col items-center"><div class="w-2 h-2 bg-amber-500 rounded-full animate-pulse"></div><div class="w-px h-10 bg-slate-800"></div></div>
-                        <div><p class="text-white font-bold">CompTIA Security+</p><p class="text-[10px] mono text-amber-500 uppercase">Examination Phase</p></div>
-                    </div>
-                    <div class="flex gap-6 opacity-40">
-                        <div class="flex flex-col items-center"><div class="w-2 h-2 bg-slate-700 rounded-full"></div></div>
-                        <div><p class="text-white font-bold">OSCP / CEH</p><p class="text-[10px] mono text-slate-500 uppercase">Future Milestone</p></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="max-w-7xl mx-auto px-6 py-24">
-        <div class="glass rounded-2xl overflow-hidden shadow-2xl">
-            <div class="bg-slate-900/50 px-6 py-3 border-b border-sky-900/20 flex justify-between">
-                <span class="mono text-[10px] text-slate-500">SEC_SHELL // root@krish_labs</span>
-                <span class="mono text-[10px] text-sky-500">ENCRYPTION: AES_256</span>
-            </div>
-            <div id="output" class="p-8 h-64 overflow-y-auto mono text-sm text-sky-400 space-y-2">
-                <div class="text-slate-600">Initializing Lab Environment... Connection Secured.</div>
-                <div>Type 'roadmap' or 'projects' to interact.</div>
-            </div>
-            <div class="p-6 bg-black/40 flex gap-4 items-center border-t border-sky-900/20">
-                <span class="mono text-sky-500 font-bold">$</span>
-                <input type="text" id="termInput" class="bg-transparent border-none outline-none text-white mono w-full" autofocus autocomplete="off">
-            </div>
-        </div>
-    </section>
-
-    <footer class="py-12 text-center border-t border-slate-900 mono text-[10px] text-slate-700 uppercase tracking-[0.5em]">
-        &copy; 2026 Krish Sandip Shah // Secure_Environment // No Logs Kept
-    </footer>
 
     <script>
         lucide.createIcons();
-        const input = document.getElementById('termInput');
-        const output = document.getElementById('output');
-        const db = {
-            'roadmap': 'STATUS: Loyalist College (2024 COMPLETE) | CompTIA Security+ (WORKING ON) | OSCP (PLANNED)',
-            'projects': 'MODS: Inspection_Tool, Packet_Sniffer, Python_Keylogger. Source code available on GitHub.',
-            'contact': 'EMAIL: Krishshah13579@gmail.com | Github: SHAHKRISHS',
-            'whoami': 'Krish Sandip Shah: Computer Engineer & Cyber Security Researcher.',
-            'clear': 'CLEAR'
-        };
 
-        input.addEventListener('keydown', (e) => {
-            if (e.key === 'Enter') {
-                const cmd = input.value.toLowerCase().trim();
-                if (cmd === 'clear') { output.innerHTML = ''; }
-                else if (db[cmd]) { output.innerHTML += `<div><span class="text-white">$ ${cmd}</span><br>${db[cmd]}</div>`; }
-                else { output.innerHTML += `<div><span class="text-white">$ ${cmd}</span><br>Command not recognized. Try 'help'.</div>`; }
-                input.value = ''; output.scrollTop = output.scrollHeight;
+        // LIVE GITHUB FETCHING LOGIC
+        async function fetchRepos() {
+            const container = document.getElementById('github-feed');
+            try {
+                // Fetching your repositories
+                const response = await fetch('https://api.github.com/users/SHAHKRISHS/repos?sort=updated');
+                const repos = await response.json();
+                
+                container.innerHTML = ''; // Clear loading state
+
+                // We filter for your specific security tools mentioned in your resume
+                const securityRepos = repos.filter(repo => 
+                    repo.name.toLowerCase().includes('sniffer') || 
+                    repo.name.toLowerCase().includes('inspection') || 
+                    repo.name.toLowerCase().includes('keylogger') ||
+                    repo.stargazers_count >= 0 // Show all if you haven't named them exactly yet
+                ).slice(0, 6);
+
+                securityRepos.forEach(repo => {
+                    const date = new Date(repo.updated_at).toLocaleDateString();
+                    container.innerHTML += `
+                        <div class="glass p-8 rounded-2xl live-card flex flex-col h-full">
+                            <div class="flex justify-between items-start mb-6">
+                                <span class="text-[10px] mono text-sky-500 uppercase tracking-widest font-bold">Module // ${repo.language || 'Python'}</span>
+                                <i data-lucide="github" class="w-4 h-4 text-slate-600"></i>
+                            </div>
+                            <h3 class="text-xl font-bold text-white mb-2 uppercase tracking-tight">${repo.name.replace(/-/g, ' ')}</h3>
+                            <p class="text-sm text-slate-500 mb-8 flex-grow">${repo.description || 'Security research and tool development repository.'}</p>
+                            <div class="pt-6 border-t border-slate-800 flex justify-between items-center">
+                                <div class="text-[9px] mono text-slate-600">
+                                    LAST_UPDATE: ${date}
+                                </div>
+                                <a href="${repo.html_url}" target="_blank" class="text-sky-400 hover:text-white transition">
+                                    <i data-lucide="external-link" class="w-4 h-4"></i>
+                                </a>
+                            </div>
+                        </div>
+                    `;
+                });
+                lucide.createIcons(); // Re-render icons
+            } catch (error) {
+                container.innerHTML = `<div class="text-red-500 mono">ERR: Failed to sync with GitHub API. Check connection.</div>`;
             }
-        });
+        }
+
+        fetchRepos();
     </script>
 </body>
 </html>
