--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .glass { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(12px); border: 1px solid rgba(56, 189, 248, 0.1); }
         .active-card { border-left: 3px solid #10b981; }
         .archive-card { border-left: 3px solid #0ea5e9; }
-        .topic-tag { background: rgba(14, 165, 233, 0.1); border: 1px solid rgba(14, 165, 233, 0.2); padding: 2px 8px; border-radius: 4px; font-size: 9px; }
+        .topic-tag { background: rgba(14, 165, 233, 0.1); border: 1px solid rgba(14, 165, 233, 0.2); padding: 2px 8px; border-radius: 4px; font-size: 9px; color: #38bdf8; }
         .typing-cursor::after { content: "_"; animation: blink 1s infinite; color: #0ea5e9; }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
     </style>
@@ -24,67 +24,80 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class="flex items-center gap-2">
                 <span class="w-2 h-2 bg-red-500 rounded-full animate-pulse"></span>
-                <span class="mono text-white font-bold uppercase text-sm tracking-tighter">KRISH_SHAH_V3.0</span>
+                <span class="mono text-white font-bold uppercase text-sm tracking-tighter">SEC_CORE // KRISH_SHAH</span>
             </div>
-            <a href="mailto:Krishshah13579@gmail.com" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition uppercase">Contact_Researcher</a>
+            <a href="mailto:Krishshah13579@gmail.com" class="bg-sky-500 text-slate-950 px-4 py-1.5 rounded font-black mono text-[10px] hover:bg-white transition uppercase tracking-widest">Connect_Link</a>
         </div>
     </nav>
 
-    <section class="min-h-[70vh] flex flex-col justify-center px-6 pt-32 max-w-7xl mx-auto">
+    <section class="min-h-[75vh] flex flex-col justify-center px-6 pt-32 max-w-7xl mx-auto">
         <div class="grid lg:grid-cols-12 gap-12">
             <div class="lg:col-span-8">
                 <h1 class="text-6xl md:text-8xl font-black text-white mb-8 tracking-tighter uppercase">Security <span class="text-sky-500">Enthusiast.</span></h1>
-                <div class="min-h-[140px] mb-8"><p id="summary-text" class="text-xl md:text-2xl leading-relaxed text-slate-200 border-l-4 border-sky-500 pl-8 typing-cursor mono"></p></div>
+                <div class="min-h-[140px] mb-8">
+                    <p id="summary-text" class="text-xl md:text-2xl leading-relaxed text-slate-200 border-l-4 border-sky-500 pl-8 typing-cursor mono"></p>
+                </div>
             </div>
             <div class="lg:col-span-4 space-y-4">
-                <h2 class="mono text-sky-500 text-[10px] uppercase tracking-[0.4em] mb-4">Education</h2>
+                <h2 class="mono text-sky-500 text-[10px] uppercase tracking-[0.4em] mb-4">Educational_Certs</h2>
                 <div class="glass p-6 rounded-2xl border-t-2 border-sky-500">
-                    <h3 class="text-white font-bold text-sm uppercase">Cyber Security (Post-Grad)</h3>
-                    <p class="text-xs text-slate-400 mt-1">Loyalist College | 2024 Graduate</p>
+                    <h3 class="text-white font-bold text-sm uppercase">Cyber Security</h3>
+                    <p class="text-xs text-slate-400 mt-1">Loyalist College | Graduated 2024</p>
                 </div>
                 <div class="glass p-6 rounded-2xl border-t-2 border-slate-700">
-                    <h3 class="text-white font-bold text-sm uppercase">Computer Engineering (B.E.)</h3>
-                    <p class="text-xs text-slate-400 mt-1">GTU | 2022</p>
+                    <h3 class="text-white font-bold text-sm uppercase">Computer Engineering</h3>
+                    <p class="text-xs text-slate-400 mt-1">GTU | Graduated 2022</p>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="max-w-7xl mx-auto px-6 py-12 border-t border-slate-900">
-        <h2 class="mono text-emerald-500 text-xs mb-8 uppercase tracking-[0.5em]">Ongoing_Operations (Updated < 30 Days)</h2>
+        <h2 class="mono text-emerald-500 text-[10px] mb-8 uppercase tracking-[0.5em] flex items-center gap-2">
+            <i data-lucide="activity" class="w-3 h-3"></i> Ongoing_Operations
+        </h2>
         <div id="ongoing-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8"></div>
     </section>
 
     <section class="max-w-7xl mx-auto px-6 py-12 border-t border-slate-900">
-        <h2 class="mono text-sky-500 text-xs mb-8 uppercase tracking-[0.5em]">Project_Archive</h2>
+        <h2 class="mono text-sky-500 text-[10px] mb-8 uppercase tracking-[0.5em] flex items-center gap-2">
+            <i data-lucide="archive" class="w-3 h-3"></i> Research_Archive
+        </h2>
         <div id="project-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-sm"></div>
     </section>
 
     <section class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
         <div class="grid lg:grid-cols-2 gap-16">
             <div class="space-y-6">
-                <h2 class="mono text-sky-500 text-[10px] mb-4 uppercase tracking-[0.4em]">Skills</h2>
+                <h2 class="mono text-sky-400 text-[10px] uppercase tracking-[0.4em]">Competency_Focus</h2>
                 <div class="flex flex-wrap gap-3">
-                    <span class="px-4 py-2 glass border border-slate-800 text-xs mono text-white">PYTHON (SECURITY)</span>
+                    <span class="px-4 py-2 glass border border-slate-800 text-xs mono text-white">PYTHON (SEC)</span>
                     <span class="px-4 py-2 glass border border-slate-800 text-xs mono text-white">NET_FORENSICS</span>
-                    <span class="px-4 py-2 glass border border-slate-800 text-xs mono text-white">OSINT</span>
+                    <span class="px-4 py-2 glass border border-slate-800 text-xs mono text-white">VULN_ASSESSMENT</span>
                 </div>
             </div>
             <div class="glass p-8 rounded-3xl border-l-4 border-amber-500">
-                <h3 class="text-white font-bold mono text-sm uppercase mb-4 tracking-widest">Active Certifications</h3>
-                <p class="text-sm text-amber-500 mono flex items-center gap-2"><i data-lucide="clock" class="w-4 h-4 animate-pulse"></i> CompTIA Security+ (In Progress)</p>
+                <h3 class="text-white font-bold mono text-sm uppercase mb-4 tracking-widest">Ongoing Certification</h3>
+                <p class="text-sm text-amber-500 mono flex items-center gap-2">
+                    <i data-lucide="loader" class="w-4 h-4 animate-spin"></i> CompTIA Security+ (Exam Prep)
+                </p>
             </div>
         </div>
     </section>
 
-    <footer class="py-12 text-center border-t border-slate-900 mono text-[10px] text-slate-700 uppercase">© 2026 Krish Sandip Shah</footer>
+    <footer class="py-12 text-center border-t border-slate-900 mono text-[10px] text-slate-700 uppercase">
+        © 2026 Krish Sandip Shah // System Nominal
+    </footer>
 
     <script>
         lucide.createIcons();
         
-        // 1. TYPING LOGIC
+        // 1. TYPING ANIMATION
         const textElement = document.getElementById('summary-text');
-        const summaries = ["Cyber Security Enthusiast building Python-based security tools for reconnaissance.", "Security Researcher focused on Network Forensics and vulnerability assessment."];
+        const summaries = [
+            "Cyber Security Enthusiast building Python-based security tools for reconnaissance and network defense.",
+            "Security Researcher focused on Network Forensics, OSINT discovery, and vulnerability assessment."
+        ];
         let sIdx = 0, cIdx = 0, deleting = false;
         function type() {
             const cur = summaries[sIdx];
@@ -95,13 +108,15 @@
             setTimeout(type, speed);
         }
 
-        // 2. REPO FETCHING LOGIC (WITH TOPICS)
+        // 2. WHITELIST REPO FETCHING
         async function fetchRepos() {
             const ongoingFeed = document.getElementById('ongoing-feed');
             const projectFeed = document.getElementById('project-feed');
             
+            // EXACT NAMES FROM YOUR GITHUB
+            const whitelist = ['Packet-Sniffing-Tool', 'The-Inspection-Tool', 'Keylogger'];
+
             try {
-                // IMPORTANT: The "mercy-preview" header is what makes topics visible!
                 const response = await fetch('https://api.github.com/users/SHAHKRISHS/repos', {
                     headers: { 'Accept': 'application/vnd.github.mercy-preview+json' }
                 });
@@ -110,22 +125,25 @@
                 const now = new Date();
                 const oneMonthAgo = new Date().setMonth(now.getMonth() - 1);
 
-                repos.forEach(repo => {
+                // Filter specifically for whitelist
+                const filteredRepos = repos.filter(repo => whitelist.includes(repo.name));
+
+                filteredRepos.forEach(repo => {
                     const updatedAt = new Date(repo.updated_at);
                     const isRecent = updatedAt > oneMonthAgo;
-                    const topicsHTML = repo.topics.map(t => `<span class="topic-tag mono uppercase text-sky-400">${t}</span>`).join(' ');
+                    const topicsHTML = repo.topics.map(t => `<span class="topic-tag mono">${t}</span>`).join(' ');
 
                     const cardHTML = `
-                        <div class="glass p-8 rounded-2xl ${isRecent ? 'active-card shadow-emerald-500/5' : 'archive-card'} flex flex-col h-full border border-slate-800 transition-all hover:-translate-y-1">
+                        <div class="glass p-8 rounded-2xl ${isRecent ? 'active-card shadow-lg shadow-emerald-500/5' : 'archive-card'} flex flex-col h-full border border-slate-800 transition-all hover:-translate-y-1">
                             <div class="flex justify-between items-center mb-4">
-                                <span class="text-[9px] mono ${isRecent ? 'text-emerald-500' : 'text-sky-500'} font-bold">● ${isRecent ? 'ACTIVE_OPS' : 'ARCHIVED'}</span>
-                                <span class="text-[9px] mono text-slate-600">${repo.language || 'Code'}</span>
+                                <span class="text-[9px] mono ${isRecent ? 'text-emerald-500' : 'text-sky-500'} font-bold">● ${isRecent ? 'LIVE_OPS' : 'ARCHIVED'}</span>
+                                <span class="text-[9px] mono text-slate-600 uppercase tracking-widest">${repo.language || 'Cyber'}</span>
                             </div>
-                            <h3 class="text-lg font-bold text-white mb-2 uppercase">${repo.name.replace(/-/g, ' ')}</h3>
-                            <p class="text-xs text-slate-500 mb-6 flex-grow">${repo.description || 'Cyber security research module.'}</p>
+                            <h3 class="text-lg font-bold text-white mb-2 uppercase tracking-tight">${repo.name.replace(/-/g, ' ')}</h3>
+                            <p class="text-xs text-slate-500 mb-6 flex-grow leading-relaxed">${repo.description || 'Dedicated security module.'}</p>
                             <div class="flex flex-wrap gap-2 mb-6">${topicsHTML}</div>
                             <div class="flex justify-between items-center text-[9px] pt-4 border-t border-slate-900 mono">
-                                <span class="text-slate-700">SYNC: ${updatedAt.toLocaleDateString()}</span>
+                                <span class="text-slate-700 uppercase">Last_Push: ${updatedAt.toLocaleDateString()}</span>
                                 <a href="${repo.html_url}" target="_blank" class="text-sky-400 hover:text-white"><i data-lucide="external-link" class="w-4 h-4"></i></a>
                             </div>
                         </div>
@@ -133,6 +151,11 @@
                     if (isRecent) ongoingFeed.innerHTML += cardHTML;
                     else projectFeed.innerHTML += cardHTML;
                 });
+
+                // Display placeholder if a section is empty
+                if (!ongoingFeed.innerHTML) ongoingFeed.innerHTML = '<p class="text-xs mono text-slate-700 italic col-span-full">No whitelist projects updated in the last 30 days.</p>';
+                if (!projectFeed.innerHTML) projectFeed.innerHTML = '<p class="text-xs mono text-slate-700 italic col-span-full">No archived whitelist projects found.</p>';
+
                 lucide.createIcons();
             } catch (err) { console.error("GITHUB_API_ERROR", err); }
         }
