--- a/index.html
+++ b/index.html
@@ -101,6 +101,53 @@
         <h2 class="mono text-sky-500 text-[10px] mb-8 uppercase tracking-[0.5em]">Research_Archive</h2>
         <div id="project-feed" class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 text-sm"></div>
     </section>
+    <section id="contact" class="max-w-7xl mx-auto px-6 py-24 border-t border-slate-900">
+        <div class="grid lg:grid-cols-2 gap-16">
+            <div>
+                <h2 class="mono text-sky-500 text-[10px] mb-4 uppercase tracking-[0.5em]">Secure_Communication</h2>
+                <h3 class="text-4xl font-black text-white mb-6 uppercase tracking-tighter">Establish a <span class="text-sky-500">Connection.</span></h3>
+                <p class="text-slate-400 leading-relaxed mb-8">
+                    Open for collaboration on security research, network forensics projects, or entry-level cybersecurity opportunities. 
+                    Expect a response within 24-48 hours.
+                </p>
+                
+                <div class="space-y-4">
+                    <div class="flex items-center gap-4 text-sm mono text-slate-300">
+                        <i data-lucide="mail" class="text-sky-500 w-5 h-5"></i>
+                        Krishshah13579@gmail.com
+                    </div>
+                    <div class="flex items-center gap-4 text-sm mono text-slate-300">
+                        <i data-lucide="map-pin" class="text-sky-500 w-5 h-5"></i>
+                        Ahmedabad, Gujarat, India
+                    </div>
+                </div>
+            </div>
+
+            <div class="glass p-8 rounded-3xl border-t border-sky-500/30">
+                <form action="https://formspree.io/f/mlgwolvv" method="POST" class="space-y-6">
+                    <div>
+                        <label class="block mono text-[10px] uppercase text-slate-500 mb-2">Identify_Sender</label>
+                        <input type="text" name="name" required placeholder="Full Name" 
+                            class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition">
+                    </div>
+                    <div>
+                        <label class="block mono text-[10px] uppercase text-slate-500 mb-2">Return_Address</label>
+                        <input type="email" name="email" required placeholder="email@example.com" 
+                            class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition">
+                    </div>
+                    <div>
+                        <label class="block mono text-[10px] uppercase text-slate-500 mb-2">Encrypted_Message</label>
+                        <textarea name="message" required rows="4" placeholder="Type your message..." 
+                            class="w-full bg-slate-900/50 border border-slate-800 rounded-lg p-3 text-white focus:outline-none focus:border-sky-500 transition"></textarea>
+                    </div>
+                    <button type="submit" 
+                        class="w-full bg-sky-500 hover:bg-white text-slate-950 font-black mono py-4 rounded-lg uppercase transition-all flex items-center justify-center gap-2">
+                        Transmit_Data <i data-lucide="send" class="w-4 h-4"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </section>
 
     <footer class="py-12 text-center border-t border-slate-900 mono text-[10px] text-slate-700 uppercase">
         © 2026 Krish Sandip Shah // Ahmedabad, India
